Bug 1771696 - Break words that overflow address book notes box. r=aleca a=wsmwk
Differential Revision: https://phabricator.services.mozilla.com/D148534

--- a/mail/themes/shared/mail/aboutAddressBook.css
+++ b/mail/themes/shared/mail/aboutAddressBook.css
@@ -791,6 +791,7 @@ body.is-editing #detailsPane #photoOverlay {
 
 section#notes div {
   white-space: pre-wrap;
+  overflow-wrap: break-word;
 }
 
 .entry-type {
